Fix issue with UL tag in the nav bar on mobile devices

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -750,8 +750,13 @@ i {
     }
 
     nav li {
-        padding: 0.15rem;
-        width: 20%;
+        /* padding: 0.15rem; */
+        width: 25%;
+    }
+
+    .nav-ul {
+        padding: 0;
+        margin: 0;
     }
 
     .navbar-nav,
